--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="search_text">Search</string>
     <string name="search_btn_text">Go!</string>
+    <string name="title_activity_results">ResultsActivity</string><string name="results">Results</string>
 
 </resources>
